assets/css/style.css
* {
    margin: 0;
    padding: 0;
    border: none;
}

@font-face {
    /* font downloaded from: https://pixelsurplus.com/products/harmony-modern-serif-font (free personal use license) */
    font-family: 'harmonymedium';
    src: url(../fonts/harmony_personal_use-webfont.woff) format('woff2'),
         url(../fonts/harmony_personal_use-webfont.woff2) format('woff');
    font-weight: normal;
    font-style: normal;

}

h1, h2 {
    font-family: 'harmonymedium', 'Trebuchet MS';
}

p, ul, nav, h3 {
    font-family: 'Trebuchet MS', 'Times New Roman';
    font-size: 115%;
    color: #1a1a19;
    line-height: 26px;
    margin-bottom: 14px;
}

ul {
    list-style-type: disc;
    list-style-position: inside;
    margin-left: 35px;
}

li {
    margin-bottom: 20px;
}

nav {
    margin-bottom: 0px;
}

nav ul li {
    margin-bottom: -14px;
}

.intro-text {
    font-size: 120%;
}

.bold {
    font-weight: bold;
}

form h2 {
    margin-bottom: 25px;
    color: #5C5C5A;
}

label {
    font-family: 'Trebuchet MS', 'Times New Roman';
    font-size: 115%;
    color: #F9F8F4;
    line-height: 26px;
    margin-bottom: 14px; 
}

/* logo and navigation menu */

#logo {
    max-height: 4em;
    margin-left: 15px;
}

#menu {
    float: right;
}

#menu li {
    float: left;
    list-style-type: none;
    margin-right: 35px;
    line-height: 65px;
    letter-spacing: 2px;
}

#menu a {
    text-decoration: none;
    color: #5C5C5A;
}

#menu a:hover {
    border-bottom: 2px solid #EFD30B;
}

.active {
    border-bottom: 2px solid #EFD30B;
}

/* hero image*/
#hero-outer {
    height: 600px;
    width: 100%;
    overflow: hidden;
    position: relative;
}

#hero-image {
    height: 600px;
    width: 100%;
    background: url(../images/hero-image-2.jpeg) no-repeat center center;

    /* animates zoom on loading landing page */
    animation-name: hero-zoom;
    animation-duration: 4s;
    animation-fill-mode: forwards;
}

/* creates level of zoom for hero image */
@keyframes hero-zoom {
    from{
        transform: scale(1);
    }
    to{
        transform: scale(1.1);
    }
}

/* title text and cover text  */

#hero-text {
    width: 100%;
    height: 100%;
    top: 30px;
    left: 20px;
    position: absolute;
}

#logo-text {
    color: #F9F8F4;
    font-size: 280%;
    padding-top: 40px;
    padding-left: 60px;
}
#sub-logo {
    color: #EFD30B;
    left: 557px;
    position: relative;
}

#cover-text {
    color: #F9F8F4;
    font-size: 120%;

    width: 350px;

    padding: 15px;

    background-color: rgb(255, 225, 0, 0.6);

    position: absolute;
    bottom: 105px;
    left: 80px;
}

/* about me styling */
.content-box {
    height: 100%;
    width: 95%;
    overflow: hidden;
    margin: 80px auto 0 50px;
}

.content-right {
    width: 42%;
    height: 100%;
    float: right;
    margin-right: 60px;
    padding: 35px 0;
}

.border-box {
    width: 540px;
    height: 165px;
    border: 15px solid #EFD30B;
}

.border-box-text {
    color: #5C5C5A;
    font-size: 300%;
    letter-spacing: 1px;
    float: right;
    margin: 71px 27px 0 0;
}

.content-left {
    width: 49%; 
    float: left;
}

.content-left img {
    /* max-width: 67%;
    min-width: 460px; */
    max-height: 690px;
    clear: both;
    float: right;
    padding: 0 61px 0 0;
}

.content-right p {
    text-align: left;
    margin: 50px 0px 0 0;
    line-height: 31px;
    max-width: 491px;
}

/* video element styling */
#impossible-solo {
    color: #5C5C5A;
    font-size: 150%;
    margin: 79px 0 0 0;
    width: 800px;
    margin-left: calc((100% - 625px) / 2);
}

.video-box {
    width: 788px;
    max-width: 1020px;
    height: 573px;
    max-height: 573px;
    margin: 20px auto 0 auto;
}

/* footer styling */
footer {
    background-color: #5C5C5A;
    height: 70px;
    clear: both;
    margin-top: 90px;
}

.socials {
    text-align: center;
}

.socials > li {
    display: inline;
}

.socials i {
    font-size: 160%;
    color: #F9F8F4;
    margin: .8% 5% 0 5%;
    padding: .5%;
}

/* 404 page */
.error-page {
    width: 507px;
    margin-left: calc((100% - 507px) / 2);
    margin-top: 45vh;
}

/* reading and playing page */

hr {
    border-top: 5px solid #5C5C5A;
}

.article-line {
    border-top: 1px solid #CAC4B5;
    width: 1161px;
    margin: 40px auto 40px auto;
}

.sheet-music-box {
    height: 100%;
    width: 95%;
    overflow: hidden;
    margin: 40px;
    text-align: center;
}

.sheet-width {
    width: 720px;
    margin-left: auto; 
    margin-right: auto;
}

figcaption {
    font-family: 'Trebuchet MS', 'Times New Roman';
    font-size: 92%;
    color: #5C5C5A;
    text-align: left;
    margin-left: 27px;
}

#sonny-payne-box {
    width: 611px;
    float: right;
}
.caption-small-margin {
    margin-left: 2px;
}

.article-box {
    max-width: 600px;
    width: 600px;
    margin-left: calc((100% - 600px) / 2);
}

.article-box h2 {
    margin: 45px 0 15px 0;
    font-size: 200%;
}

.article-box h3 {
    margin: 10px 0 15px 0;
    font-size: 140%
}

audio {
    padding: 12px 0 23px 0;
}

/* three drummers page */

#count-basie-box {
    width: 594px;
    float: right;
}

.drummer-box {
    width: 1200px;
    margin-left: auto; 
    margin-right: auto; 
}

.drummer-box img {
    width: 1200px;
}

.quote-box {
    max-width: 505px;
    width: 505px;
    margin-left: calc((100% - 505px) / 2);
}

/* contact page */
.contact-section {
    /* image taken from: https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.last.fm%2Fmusic%2FCount%2BBasie%2B%26%2BHis%2BOrchestra&psig=AOvVaw3gib7PEU6RCHmW6z8rne8H&ust=1647618925218000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCKC-i_nAzfYCFQAAAAAdAAAAABAD */
    background: url("../images/count-basie-background.webp") no-repeat center;
    background-size: cover;
    height: 900px;
    margin-bottom: -90px;
}

.contact-box {
    color: #1a1a19;
    font-size: 120%;

    width: 511px;
    height: 500px;

    padding: 15px;

    background-color: rgb(232, 211, 64, 0.86);

    position: absolute;
    top: 216px;
    bottom: 70px;
    left: 113px;
    padding: 25px 43px 115px 59px;
    border-radius: 5px;
}

.input-field {
    color: #5C5C5A; 
    background: transparent;
    width: 95%;
    height: 25px;
    margin: 5px 0 20px;
    border: 2px solid #F9F8F4;
}

.comment-field {
    color: #5C5C5A; 
    background: transparent;
    text-align: top;
    width: 95%;
    height: 107px;
    margin: 5px 0 20px;
    border: 2px solid #F9F8F4;
}

.submit-button {
    height: 40px;
    width: 96%;
    font-size: 105%;
    color: #5C5C5A;
    border-radius: 6px;
}

.submit-button:hover {
    color: #EFD30B;
    background-color: #5C5C5A;
}

/* Media Queries */

/* For larger screens to medium screens from 1300px wide and down */
@media screen and (max-width: 1300px) {
    .border-box {
        width: 283px;
    }
    .intro-text {
        font-size: 105%;
    }
    .border-box-text {
        font-size: 250%;
        position: relative; 
    }
    .border-box-long-text {
        font-size: 250%;
        position: relative;
        margin: 0;
        top: 40px;
        left: 20px;
    }
    .content-left img {
        padding: 0 25px 0 0;
    }

    .drummer-box {
        width: 870px;
    }
    .drummer-box img{
        width: 870px;
    }
    .article-line {
        width: 770px;
    }
}

/* For smaller screens with a width of 950px and down  */
@media screen and (max-width: 950px) {
    
}

